--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,15 +75,15 @@ jobs:
 
       - name: Debug Build Output
         run: |
-          echo "Debugging bas directory:"
+          echo "Debugging base directory:"
           ls
           echo "Debugging build output:"
-          ls ${{ env.app }}
+          ls ${{ env.app }}/baba_yaga
 
       - name: Upload WASM Artifacts
         uses: actions/upload-artifact@v4
         with:
-          path: ${{ env.app }}
+          path: ${{ env.app }}/baba_yaga
           name: wasm-artifacts
 
   deploy:
