--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
 bevy_ecs_tilemap = "0.17"
 bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
 bevy_behave = { git = "https://github.com/HazelTheWitch/bevy_behave", branch = "main" }
+bevy_enhanced_input = "0.19.2"
 accesskit = "0.21"
-avian2d = "0.4"
+avian2d = "0.4.1"
 rand = "0.9"
 serde = "1.0.228"
 # Compile out low-severity logs to improve performance.
