--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ description = "Baba Yaga is a 2D platformer game about a witch who wants to eat 
 bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
 bevy_ecs_tilemap = "0.17"
 bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
-bevy_behave = { git = "https://github.com/HazelTheWitch/bevy_behave", branch = "main" }
-bevy_enhanced_input = "0.19.2"
+bevy_behave = "0.4"
+bevy_enhanced_input = "0.20.0"
 accesskit = "0.21"
 avian2d = "0.4.1"
 rand = "0.9"
@@ -61,7 +61,6 @@ unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
 
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
-# cargo = { level = "warn", priority = -1 }
 # Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
 # request more than 7 arguments, which would undesirably trigger this lint.
 too_many_arguments = "allow"
