feat: Add clippy pedantic group (#80)
* feat: Add clippy pedantic group

---------

Co-authored-by: Kayton Fletcher <kayton@fastmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "baba_yaga"
 version = "0.1.0"
 edition = "2024"
+description = "Baba Yaga is a 2D platformer game about a witch who wants to eat you."
 
 [dependencies]
 bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
@@ -59,6 +60,8 @@ features = ["dev"]
 unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
 
 [lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+# cargo = { level = "warn", priority = -1 }
 # Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
 # request more than 7 arguments, which would undesirably trigger this lint.
 too_many_arguments = "allow"
@@ -66,18 +69,31 @@ too_many_arguments = "allow"
 type_complexity = "allow"
 # Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
 nonstandard_macro_braces = "warn"
+needless_pass_by_value = "allow"
+cast_precision_loss = "allow"
+cast_possible_truncation = "allow"
+cast_possible_wrap = "allow"
+must_use_candidate = "allow"
+return_self_not_must_use = "allow"
+missing_panics_doc = "allow"
+missing_errors_doc = "allow"
+cast_sign_loss = "allow"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
+split-debuginfo = "unpacked"
+
+# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
+[profile.dev.package.wgpu-types]
+debug-assertions = false
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
 
-# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
-[profile.dev.package.wgpu-types]
-debug-assertions = false
+[profile.dev.build-override]
+opt-level = 3
 
 [profile.release]
 # Compile the entire crate as one unit.
