--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 description = "Baba Yaga is a 2D platformer game about a witch who wants to eat you."
 
 [dependencies]
-bevy = { version = "=0.17.2", features = ["experimental_bevy_feathers", "webgpu"] }
+bevy = { version = "0.17.3", features = ["experimental_bevy_feathers", "webgpu"] }
 bevy_ecs_tilemap = "0.17"
 bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
 bevy_behave = "0.4"
